--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CSGO Web Hud",
   "dependencies": {
     "express": "^4.13.3",
-    "jade": "^1.11.0",
+    "ejs": "^2.5.7",
     "socket.io": "^1.3.7"
   }
 }
